make sure text is to the left on mobile accordions

--- a/src/App.scss
+++ b/src/App.scss
@@ -396,6 +396,7 @@ body {
   padding: 18px;
   display: flex;
   align-items: center;
+  text-align: left;
   border: none;
   outline: none;
   transition: background-color 0.4s ease;
